@@ -1,29 +1,27 @@
 package jetbrains.mps.idea.java.refactoring;
 
-import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
-import jetbrains.mps.ide.platform.refactoring.RefactoringAccessEx;
 import jetbrains.mps.ide.platform.refactoring.RenameMethodDialog;
 import jetbrains.mps.idea.core.refactoring.RenameRefactoringContributor;
 import jetbrains.mps.project.MPSProject;
 import jetbrains.mps.refactoring.framework.IRefactoring;
 import jetbrains.mps.refactoring.framework.RefactoringContext;
+import jetbrains.mps.refactoring.runtime.access.RefactoringAccess;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.mps.openapi.language.SConcept;
 import org.jetbrains.mps.openapi.model.SNode;
 import org.jetbrains.mps.openapi.model.SNodeUtil;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * danilla 6/4/13
  */
 public class MethodRenameContributor implements RenameRefactoringContributor {
-  private static final Logger LOG = Logger.getInstance("#jetbrains.mps.idea.core.refactoring.MethodRenameContributor");
-
   @Override
-  public boolean isAvailableFor(SNode node) {
-    return node != null && isJavaMethod(node);
+  public boolean isAvailableFor(@NotNull SNode node) {
+    return isJavaMethod(node);
 
   }
 
@@ -49,12 +47,13 @@ public class MethodRenameContributor implements RenameRefactoringContributor {
       return;
     }
 
-    IRefactoring psiAwareRefactoring = new PsiMethodRenameRefactoringWrapper(RefactoringAccessEx.getInstance());
+    final RefactoringAccess refactoringAccess = RefactoringAccess.getInstance(mpsProject);
+    IRefactoring psiAwareRefactoring = new PsiMethodRenameRefactoringWrapper(refactoringAccess);
 
-    RefactoringAccessEx.getInstance().getRefactoringFacade().execute(RefactoringContext.createRefactoringContext(
+    refactoringAccess.getRefactoringFacade().execute(RefactoringContext.createRefactoringContext(
       psiAwareRefactoring,
       Arrays.asList("newName", "refactorOverriding"),
-      Arrays.asList(newName),
+      List.of(newName),
       node,
       mpsProject));
   }
